* Fix {bz: 1743} for IE6 by specifying a sensible width for Tools menu item to wrap.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@11906 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.ie.css
+++ b/nlw/share/skin/s3/css/screen.ie.css
@@ -23,6 +23,11 @@ html body#dashBoard div#controls div#controlsRight {
     white-space: nowrap;
 }
 
+/* IE6-only fix for {bz: 1743} - Force wrapping of Tools menu items */
+html body#dashBoard div#controls div#controlsRight.peoplelist {
+    -width: 200px !important;
+}
+
 /* Fix IE7 top offset shift for controlsRight dashboard buttons */
 html body#dashBoard div#controls div#controlsRight ul.profile-links li {
     margin-top: -11px;
